iniciar con  el server 2

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "primer proyecto boots\u001bttrap con nodejs",
   "main": "index.html",
   "scripts": {
+    "dev":  "lite server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
