--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "concurrently \"npm run watch:scss\" \"npm run dev \"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass -o css/ css/",
-    "watch:scss": "onchange 'css/*.scss' -- npm run scss",
+    "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
     "clean": "rimraf dist",
     "imagemin": "imagemin images/* --out-dir dist/images",
     "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html && usemin about.html -d dist --htmlmin -o dist/about.html  && usemin precios.html -d dist --htmlmin -o dist/precios.html  && usemin contacto.html -d dist --htmlmin -o dist/contacto.html && usemin terminos.html -d dist --htmlmin -o dist/terminos.html",
@@ -37,6 +37,7 @@
     "grunt-css": "^0.5.4",
     "grunt-filerev": "^2.3.1",
     "grunt-usemin": "^3.1.1",
+    "gulp": "^4.0.2",
     "htmlmin": "0.0.7",
     "jit-grunt": "^0.10.0",
     "less": "^3.12.2",
@@ -51,6 +52,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "concurrently": "^5.2.0",
+    "grunt-cli": "^1.3.2",
     "jquery": "^3.5.1",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.16.1",
